Fixed z-indexing problem on Contacts/new.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -255,6 +255,10 @@ table, th, td {
   background-color: #3c3c3c;
 }
 
+.z_index_2 {
+  z-index: 2;
+}
+
 
 @media (min-width: 740px){
   .pet_icon {
